--- a/lesson6/style.css
+++ b/lesson6/style.css
@@ -40,8 +40,23 @@ summary::-webkit-details-marker {
   display: none;
 }
 
+.top {
+  overflow: hidden;
+}
+
+#check {
+  position: absolute;
+  left: -99999px;
+  visibility: hidden;
+}
+
+#check:checked ~ .menu_new {
+  right: 0;
+}
+
 .header {
   background: #222;
+  position: relative;
 }
 .header__navigation {
   display: flex;
@@ -59,7 +74,13 @@ summary::-webkit-details-marker {
   margin-bottom: 20px;
   display: flex;
   gap: 33px;
-  position: relative;
+}
+
+.buttonList__catalog {
+  margin-top: 26px;
+  margin-bottom: 20px;
+  display: flex;
+  gap: 33px;
 }
 
 .btn {
@@ -247,18 +268,24 @@ main {
 }
 
 .filter {
-  margin-top: 51px;
-  margin-bottom: 65px;
-  display: flex;
-  gap: 320px;
+  position: relative;
+  height: 133px;
+}
+.filter__main {
+  position: absolute;
+  top: 51px;
+  left: 0;
 }
 .filter__main[open] {
+  position: absolute;
+  top: 39px;
+  left: 0;
+  background: #FFF;
   box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
   width: 360px;
   height: 531px;
   padding: 13px 17px 16px;
   box-sizing: border-box;
-  position: relative;
 }
 .filter__main[open] summary.filter__summary {
   color: #EF5B70;
@@ -266,7 +293,7 @@ main {
   font-weight: 600;
   line-height: normal;
 }
-.filter__main[open] svg path {
+.filter__main[open] svg.filter__summary_svg path {
   fill: #EF5B70;
 }
 .filter__summary {
@@ -296,7 +323,6 @@ main {
   font-weight: 400;
   line-height: normal;
   border-bottom: 1px solid #EBEBEB;
-  width: 310px;
   height: 37px;
   border-left: 5px solid #EF5B70;
   padding-left: 11px;
@@ -321,6 +347,9 @@ main {
 }
 
 .filter__sort {
+  position: absolute;
+  top: 51px;
+  left: 390px;
   display: flex;
   justify-content: space-between;
   width: 296.02px;
@@ -733,6 +762,10 @@ footer {
   gap: 7.29px;
 }
 
+.buttonList {
+  position: relative;
+}
+
 .buttonList::after {
   content: "5";
   background: #F16D7F;
@@ -747,8 +780,64 @@ footer {
   font-weight: 400;
   line-height: normal;
   position: absolute;
-  top: -7px;
-  right: -7px;
+  top: -8px;
+  right: -8px;
+}
+
+.buttonList__catalog::after {
+  content: "5";
+  background: #F16D7F;
+  width: 19px;
+  height: 19px;
+  border-radius: 50px;
+  text-align: center;
+  color: #FFF;
+  font-family: Lato;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.menu_new {
+  background: #FFF;
+  width: 232px;
+  height: 634px;
+  position: absolute;
+  z-index: 1;
+  top: 75px;
+  right: -232px;
+  box-sizing: border-box;
+  filter: drop-shadow(6px 4px 35px rgba(0, 0, 0, 0.21));
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  transition: right 0.7s;
+  background: #FFF;
+}
+.menu_new h1 {
+  margin-top: 32px;
+  color: #000;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: normal;
+  padding-left: 33px;
+  margin-bottom: 4px;
+}
+.menu_new a {
+  color: #6F6E6E;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: normal;
+  padding-left: 21.5px;
+}
+
+.menu_new .menu-h2 {
+  color: #F16D7F;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: normal;
+  padding-left: 0;
 }
 
 .menu {
@@ -756,8 +845,10 @@ footer {
   width: 232px;
   height: 634px;
   position: absolute;
+  z-index: 1;
   top: 0;
   right: 0;
+  box-sizing: border-box;
   filter: drop-shadow(6px 4px 35px rgba(0, 0, 0, 0.21));
   display: flex;
   flex-direction: column;
@@ -980,6 +1071,9 @@ svg:hover .icon {
   .bannerText h2 {
     font-size: 24px;
   }
+  .buttonList__checkbox::after {
+    right: -122px;
+  }
   .offer {
     gap: 20px;
     margin-bottom: 110px;
@@ -1083,6 +1177,9 @@ svg:hover .icon {
     margin-bottom: 26px;
   }
   .buttonList::after {
+    content: none;
+  }
+  .buttonList__catalog::after {
     content: none;
   }
   .hideBtn {
