--- a/lesson6/style.scss
+++ b/lesson6/style.scss
@@ -43,6 +43,8 @@ p,
 a,
 summary,
 span,
+label,
+input,
 button {
   font-family: "Lato", sans-serif;
   font-style: normal;
@@ -927,6 +929,129 @@ main {
   &__mainButtons_right:hover {
     color: #FFF;
     background: #4A4A4A;
+  }
+}
+
+.registration {
+  &__content {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 64px;
+  }
+
+  &__left-side {
+    width: 360px;
+  }
+
+  &__name {
+    color: #222;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  &__input {
+    margin-top: 20.5px;
+    width: 358px;
+    height: 43px;
+    border: 1px solid #A4A4A4;
+    padding: 17px;
+    box-sizing: border-box;
+    color: #222;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  &__input::placeholder {
+    color: #B1B1B1;
+  }
+
+  &__gender {
+    margin-top: 31.5px;
+    margin-bottom: 33px;
+    display: flex;
+    gap: 20px;
+  }
+
+  &__label {
+    display: flex;
+    gap: 10px;
+    color: #000;
+    font-size: 11px;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  &__info {
+    margin-top: 15.5px;
+    color: #B1B1B1;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  &__button {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    margin-top: 39px;
+    margin-bottom: 96px;
+    padding: 16px 28px 16px 29px;
+    border: 1px solid #F16D7F;
+    background: #F16D7F;
+    cursor: pointer;
+    color: #FFF;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: normal;
+    transition: all 0.3s;
+  }
+
+  &__button:hover {
+    background: #FFF;
+    color: #F16D7F;
+    border: 1px solid #F16D7F;
+  }
+
+  &__button:hover .registration__svg path{
+    fill: #F16D7F;
+  }
+
+  &__right-side {
+    width: 652px;
+  }
+
+  &__heading {
+    color: #000;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  &__text {
+    margin-top: 22px;
+    color: #000;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  &__offers {
+    margin-top: 21px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
+
+  &__offer {
+    display: flex;
+    align-items: center;
+    gap: 22px;
+    color: #000;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: normal;
   }
 }
 
