--- a/lesson6/style.scss
+++ b/lesson6/style.scss
@@ -1567,6 +1567,81 @@ svg:hover .icon{
     right: -122px;
   }
 
+  .bannerinfoCatalog__breadcrumb__box a {
+    font-weight: 300;
+  }
+
+  .bannerinfoCatalog__breadcrumb__box:not(:last-child)::after {
+    font-weight: 300;
+  }
+
+  .bannerinfoProduct {
+    height: 624px;
+
+    &__background-left {
+      top: 288px;
+    }
+
+    &__background-right {
+      top: 288px;
+    }
+  }
+
+  .bannerinfoProduct__background{
+    width: 466px;
+    height: 565px;
+  }
+
+  .productsProduct {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 16px;
+    margin-bottom: 129px;
+  }
+
+  .productsProduct .product:nth-child(1) {
+    order: 2;
+  }
+
+  .productsProduct .product:nth-child(2) {
+    order: 1;
+  }
+
+  .product6_hidden {
+    display: none;
+  }
+
+  .bannerinfoProduct__overlay {
+    height: 601px;
+    margin-top: 0;
+    }
+
+  .bannerinfoProduct__overlay.container {
+    max-width: 768px;
+  }
+
+  .productsProduct.container {
+    max-width: 736px;
+  }
+
+  .filter {
+    height: 81px;
+
+    &__main{
+      top: 24px;
+    }
+  }
+
+  .filter__sort {
+    top: 24px;
+    left: 440px;
+  }
+
+  .productsCatalog {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 16px;
+  }
+
   .offer {
     gap: 20px;
     margin-bottom: 110px;
@@ -1625,6 +1700,16 @@ svg:hover .icon{
 
   .btnAll {
     margin-bottom: 64.52px;
+  }
+
+  .product3_hidden {
+    display: none;
+  }
+
+  .pagination{
+    width: 282.907px;
+    margin-top: 40.5px;
+    margin-bottom: 63.5px;
   }
 
   .feature {
